core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/ZVC__Zoom_Webinar_Registrant__c.object-meta.xml
<CustomObject>
    <label>Zoom Webinar Registrant</label>
    <nameField>
        <displayFormat>Reg-{0000}</displayFormat>
        <label>Zoom Webinar Registrant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinar Registrants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>