core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Address__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>