core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__City__c.field-meta.xml
<CustomField>
    <fullName>ZVC__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>