core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Comments__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>