core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Country__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>