core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__External_Key__c.field-meta.xml
<CustomField>
    <fullName>ZVC__External_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>