core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Industry__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Industry__c</fullName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>