core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Job_Title__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>