core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Org__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Org__c</fullName>
    <label>Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>