core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Organization__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Organization__c</fullName>
    <label>Organization</label>
    <type>TextArea</type>
</CustomField>