core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Phone__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>