core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__State__c.field-meta.xml
<CustomField>
    <fullName>ZVC__State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>