core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Registrant__c/fields/ZVC__Zip__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zip__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>